--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ gevent==22.10.2
 greenlet==2.0.2
 gunicorn==20.1.0
 jmespath==1.0.1
+load-dotenv==0.1.0
 mypy-extensions==1.0.0
 packaging==23.1
 pathspec==0.11.1
@@ -21,6 +22,7 @@ psycopg2==2.9.6
 psycopg2-binary==2.9.6
 pycparser==2.21
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 s3transfer==0.6.1
 six==1.16.0
 sqlparse==0.4.4
